--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@vercel/postgres": "^0.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "^8.54.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
